hphp/test/slow/class_constant/abstract_const4.php.expectf
string(4) "D::C"

Fatal error: Couldn't find constant C::X in %stest/slow/class_constant/abstract_const4.php on line 18
